--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="container">
       <div class="row mt-5">
-        <div class="col-sm-6 text-center d-none d-lg-block"><img src="/images/sauna.png" class="img-fluid rounded" /></div>
+        <div class="col-sm-6 text-center d-none d-lg-block"><img src="/images/sauna.png" alt="sauna project" class="img-fluid rounded" /></div>
         <div class="col-sm-6 left">
           <p>
             <h2 class="left">Sauna app</h2>
@@ -82,12 +82,12 @@
         </p>
 
         </div>
-        <div class="col-sm-6 text-center d-none d-lg-block"><img src="/images/weather.png" class="img-fluid rounded"></div>
+        <div class="col-sm-6 text-center d-none d-lg-block"><img src="/images/weather.png" alt="weather app" class="img-fluid rounded"></div>
       </div>
     </div>
     <div class="container">
       <div class="row mt-5">
-        <div class="col-sm-6 text-center d-none d-lg-block"><img src="/images/yogurt.png" class="img-fluid rounded">
+        <div class="col-sm-6 text-center d-none d-lg-block"><img src="/images/yogurt.png" alt="yogurt project" class="img-fluid rounded">
         </div>
         <div class="col-sm-6 left"> <p>
           <h2 class="left">Yogurt app</h2>
