--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="I am Nikolett Farkas - Front-end developer, SheCodes alumni. Please check out my portfolio. I am always open for new opportunities.">
+    <meta name="description" content="I am Nikolett Farkas - Front-end developer, SheCodes alumni, with business management background. Based in Turku, Finland. I am always open for new opportunities.">
     <title>Nikolett Farkas 👩🏻‍💻 - Front-end developer 🇭🇺 🇫🇮</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <link
